Support transpose/transverse as lossless JPEG transformations

Also implement a warning message if unsupported transformations
are used to easier discover such cases in the future.

Eog bug http://bugzilla.gnome.org/show_bug.cgi?id=632290
Based on eog commit 5bb5a0bbbd8a47215828f30d97474d63dc979be4
From Felix Riemann <friemann@gnome.org>