src/eom-image-jpeg.c
@@ -150,7 +150,16 @@ init_transform_info (EomImage *image, jpeg_transform_info *info)
 		case EOM_TRANSFORM_FLIP_VERTICAL:
 			trans_code = JXFORM_FLIP_V;
 			break;
+		case EOM_TRANSFORM_TRANSPOSE:
+			trans_code = JXFORM_TRANSPOSE;
+			break;
+		case EOM_TRANSFORM_TRANSVERSE:
+			trans_code = JXFORM_TRANSVERSE;
+			break;
 		default:
+			g_warning("EomTransformType not supported!");
+			/* Fallthrough intended here. */
+		case EOM_TRANSFORM_NONE:
 			trans_code = JXFORM_NONE;
 			break;
 		}
